updated html and added more css

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <script
+      src="https://kit.fontawesome.com/10ef9ad399.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,500;1,300&family=Lora&display=swap"
       rel="stylesheet"
@@ -28,7 +38,26 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>Hi I am</h2>
-    <h1>Angelique</h1>
+    <img
+      class="header_avatar"
+      src="images/angel.jpg"
+      class="img-fluid-rounded"
+      width="48"
+      height="48"
+      alt="angelique"
+      <
+    />
+    <span class="text-white">Angelique Hilario</span>
+    <span class="header_verification" aria-hidden="true"></span>
+    <i class="fa-solid fa-badge-check fa-sm" style="color: #2cb6d8"></i>
+
+    <h2>HELLO,MY NAME IS ANGELIQUE</h2>
+    <h1>I MAKE WEBSITES</h1>
+    <h2 class="header_description">
+      Front-End Developer Based In South Africa
+    </h2>
+    <div>
+      <a href="#" class="btn btn-branding"> Lets get in Touch</a>
+    </div>
   </body>
 </html>
