updated homepage content

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/styles.css" />
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body>
     <img
@@ -45,11 +45,10 @@
       width="48"
       height="48"
       alt="angelique"
-      <
+      <a
     />
-    <span class="text-white">Angelique Hilario</span>
-    <span class="header_verification" aria-hidden="true"></span>
-    <i class="fa-solid fa-badge-check fa-sm" style="color: #2cb6d8"></i>
+    <a href="#" class="text-decoration-none text-white">Angelique Hilario</a>
+    <i class="fa-solid fa-badge-check fa-sm" style="color: blue"></i>
 
     <h2>HELLO,MY NAME IS ANGELIQUE</h2>
     <h1>I MAKE WEBSITES</h1>
@@ -57,7 +56,75 @@
       Front-End Developer Based In South Africa
     </h2>
     <div>
-      <a href="#" class="btn btn-branding"> Lets get in Touch</a>
+      <a href="#" class="btn btn-branding d-grid gap-2 col-6 mx-auto">
+        Lets get in Touch!</a
+      >
+    </div>
+    <p class="text-center">Check out my current best projects!</p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/yogurt.png" alt="yogurt app" class="img-fluid" />
+        </div>
+        <div class="col">
+          <h2 class="header_yogurt mb-5">Yogurt Project</h2>
+          <p class="text-center mb-5">
+            Far far away from the roads from south africa Far far away from the
+            roads from south africa Far far away from the roads from south
+            africa Far far away from the roads from south africa Far far away
+            from the roads from south africa Far far away from the roads from
+            south africa Far far away from the roads from south africa Far far
+            away from the roads from south africa Far far away from the roads
+            from south africa Far far away from the roads from south africa
+          </p>
+          <a
+            href="#"
+            class="btn btn-branding-outline d-grid gap-2 col-6 mx-auto"
+          >
+            Launch Project</a
+          >
+        </div>
+      </div>
+    </div>
+    <div class="row mb-5">
+      <div class="col d-none d-lg-block">
+        <img src="images/weather.png" alt="weather app" class="img-fluid" />
+      </div>
+      <div class="col">
+        <h2 class="header_yogurt mb-5">Weather Project</h2>
+        <p class="text-center mb-5">
+          Far far away from the roads from south africa Far far away from the
+          roads from south africa Far far away from the roads from south africa
+          Far far away from the roads from south africa Far far away from the
+          roads from south africa Far far away from the roads from south africa
+          Far far away from the roads from south africa Far far away from the
+          roads from south africa Far far away from the roads from south africa
+          Far far away from the roads from south africa
+        </p>
+        <a href="#" class="btn btn-branding-outline d-grid gap-2 col-6 mx-auto">
+          Launch Project</a
+        >
+      </div>
+    </div>
+    <div class="row mb-5">
+      <div class="col d-none d-lg-block">
+        <img src="images/yoga.png" alt="yoga app" class="img-fluid" />
+      </div>
+      <div class="col">
+        <h2 class="header_yogurt mb-5">Yoga Project</h2>
+        <p class="text-center mb-5">
+          Far far away from the roads from south africa Far far away from the
+          roads from south africa Far far away from the roads from south africa
+          Far far away from the roads from south africa Far far away from the
+          roads from south africa Far far away from the roads from south africa
+          Far far away from the roads from south africa Far far away from the
+          roads from south africa Far far away from the roads from south africa
+          Far far away from the roads from south africa
+        </p>
+        <a href="#" class="btn btn-branding-outline d-grid gap-2 col-6 mx-auto">
+          Launch Project</a
+        >
+      </div>
     </div>
   </body>
 </html>
