--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -38,91 +38,52 @@
     <title>Home</title>
   </head>
   <body>
-    <img
-      class="header_avatar"
-      src="images/angel.jpg"
-      class="img-fluid-rounded"
-      width="48"
-      height="48"
-      alt="angelique"
-      <a
-    />
-    <a href="#" class="text-decoration-none text-white">Angelique Hilario</a>
-    <i class="fa-solid fa-badge-check fa-sm" style="color: blue"></i>
-
-    <h2>HELLO,MY NAME IS ANGELIQUE</h2>
-    <h1>I MAKE WEBSITES</h1>
-    <h2 class="header_description">
-      Front-End Developer Based In South Africa
-    </h2>
-    <div>
-      <a href="#" class="btn btn-branding d-grid gap-2 col-6 mx-auto">
-        Lets get in Touch!</a
-      >
-    </div>
-    <p class="text-center">Check out my current best projects!</p>
-    <div class="container">
-      <div class="row mb-5">
-        <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" alt="yogurt app" class="img-fluid" />
-        </div>
-        <div class="col">
-          <h2 class="header_yogurt mb-5">Yogurt Project</h2>
-          <p class="text-center mb-5">
-            Far far away from the roads from south africa Far far away from the
-            roads from south africa Far far away from the roads from south
-            africa Far far away from the roads from south africa Far far away
-            from the roads from south africa Far far away from the roads from
-            south africa Far far away from the roads from south africa Far far
-            away from the roads from south africa Far far away from the roads
-            from south africa Far far away from the roads from south africa
-          </p>
-          <a
-            href="#"
-            class="btn btn-branding-outline d-grid gap-2 col-6 mx-auto"
-          >
-            Launch Project</a
-          >
-        </div>
-      </div>
-    </div>
-    <div class="row mb-5">
-      <div class="col d-none d-lg-block">
-        <img src="images/weather.png" alt="weather app" class="img-fluid" />
-      </div>
-      <div class="col">
-        <h2 class="header_yogurt mb-5">Weather Project</h2>
-        <p class="text-center mb-5">
-          Far far away from the roads from south africa Far far away from the
-          roads from south africa Far far away from the roads from south africa
-          Far far away from the roads from south africa Far far away from the
-          roads from south africa Far far away from the roads from south africa
-          Far far away from the roads from south africa Far far away from the
-          roads from south africa Far far away from the roads from south africa
-          Far far away from the roads from south africa
-        </p>
-        <a href="#" class="btn btn-branding-outline d-grid gap-2 col-6 mx-auto">
-          Launch Project</a
+    <nav class="navbar navbar-expand-lg navbar-dark" data-bs-theme="dark">
+      <div class="container d-flex justify-content-between">
+        <a class="navbar-brand" href="#">
+          <img src="images/angel.jpg" alt="angelique" class="logo" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
         >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/work.html">Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-    <div class="row mb-5">
-      <div class="col d-none d-lg-block">
-        <img src="images/yoga.png" alt="yoga app" class="img-fluid" />
-      </div>
-      <div class="col">
-        <h2 class="header_yogurt mb-5">Yoga Project</h2>
-        <p class="text-center mb-5">
-          Far far away from the roads from south africa Far far away from the
-          roads from south africa Far far away from the roads from south africa
-          Far far away from the roads from south africa Far far away from the
-          roads from south africa Far far away from the roads from south africa
-          Far far away from the roads from south africa Far far away from the
-          roads from south africa Far far away from the roads from south africa
-          Far far away from the roads from south africa
-        </p>
-        <a href="#" class="btn btn-branding-outline d-grid gap-2 col-6 mx-auto">
-          Launch Project</a
+    </nav>
+      <h2>HELLO,MY NAME IS ANGELIQUE HILARIO</h2>
+      <h1>I MAKE WEBSITES</h1>
+      <h2 class="header_description">
+        Front-End Developer Based In South Africa
+      </h2>
+      <p>
+        Ever since i can remember i loved fixing simple problems on a mobile
+        phone and i was always curious about whats happening behind the scenes.
+      </p>
+      <div>
+        <a
+          href="/contact.html"
+          class="btn btn-branding d-grid gap-2 col-6 mx-auto"
+        >
+          Lets get in Touch!</a
         >
       </div>
     </div>
