--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
@@ -69,23 +69,22 @@
         </div>
       </div>
     </nav>
-      <h2>HELLO,MY NAME IS ANGELIQUE HILARIO</h2>
-      <h1>I MAKE WEBSITES</h1>
-      <h2 class="header_description">
-        Front-End Developer Based In South Africa
-      </h2>
-      <p>
-        Ever since i can remember i loved fixing simple problems on a mobile
-        phone and i was always curious about whats happening behind the scenes.
-      </p>
-      <div>
-        <a
-          href="/contact.html"
-          class="btn btn-branding d-grid gap-2 col-6 mx-auto"
-        >
-          Lets get in Touch!</a
-        >
-      </div>
+    <h2>HELLO,MY NAME IS ANGELIQUE HILARIO</h2>
+    <h1>I MAKE WEBSITES</h1>
+    <h2 class="header_description">
+      Front-End Developer Based In South Africa
+    </h2>
+    <p>
+      Ever since i can remember i loved fixing simple problems on a mobile phone
+      and i was always curious about whats happening behind the scenes.
+    </p>
+    <div>
+      <a
+        href="/contact.html"
+        class="btn btn-branding d-grid gap-2 col-6 mx-auto"
+      >
+        Lets get in Touch!</a
+      >
     </div>
   </body>
 </html>
