--- a/contact.html
+++ b/contact.html
@@ -61,13 +61,13 @@
     </nav>
     <div class="content-container container">
       <h1 class="mb-5">Lets get in touch!</h1>
-      <h3>Email📩</h3>
+      <h3 class="text-white">Email📩</h3>
       <a href="mailto:team@shecodes.io">Send me a email!</a>
-      <h3>LinkedIn🖥</h3>
+      <h3 class="text-white">LinkedIn🖥</h3>
       <a href="mailto:www.linkedin.com/in/angelique-hilario-lique007"
         >Send me a message!</a
       >
-      <h3>GitHub💻</h3>
+      <h3 class="text-white">GitHub💻</h3>
       <a href="mailto:https://github.com/DevLique">Check out my work!</a>
     </div>
   </body>
