--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="Website Portfolio"
+      content="Angelique is a creative and professional front end developer based in Cape Town,South Africa."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,12 +39,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/styles.css" />
-    <title>Home</title>
+    <title>Front-end Developer-Angelique Hilario</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark" data-bs-theme="dark">
       <div class="container d-flex justify-content-between">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="/">
           <img src="images/angel.jpg" alt="angelique" class="logo" />
         </a>
         <button
