--- a/work.html
+++ b/work.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="Work - Angelique"
+      content="Check out my variety of projects ive worked on so far."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -35,7 +39,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/styles.css" />
-    <title>Work</title>
+    <title>Check out my awesome work - Angelique</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark" data-bs-theme="dark">
