added the final touches to the project

--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
       >
         Lets get in Touch!</a
       >
+      <p class="text-center">
+        This website was coded by Angelique Hilario, and is<a
+          href="https://github.com/DevLique"
+          >Open Sourced.</a
+        >
+      </p>
     </div>
   </body>
 </html>
